refactoring : handler 의 책임은 method로 분리하는게 아니라 URI로 분리하는 것이라고 판단해서 로직 변경 및 new Long -> Long.valueOf 로 변경